--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+
   </head>
   <body>
     <div id="root"></div>
